--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.28.71.15;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -5,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -286,6 +286,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -635,6 +636,7 @@ allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.160;
+allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.181;
 allow 193.218.118.182;
@@ -718,6 +720,7 @@ allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
+allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -903,7 +906,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -930,7 +932,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1421,6 +1422,7 @@ allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
+allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
@@ -1447,6 +1449,7 @@ allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.120.239.59;
+allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.131;
 allow 37.228.129.5;
@@ -1456,7 +1459,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.205.198.182;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1638,6 +1640,7 @@ allow 80.67.172.162;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 81.16.33.42;
+allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.197.182.161;
 allow 82.221.131.5;
@@ -1754,7 +1757,6 @@ allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.244.28;
-allow 95.245.154.39;
 allow 96.126.98.146;
 allow 96.27.198.133;
 allow 96.42.26.63;
