--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,6 +5,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -279,6 +280,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -651,6 +653,7 @@ deny 194.233.174.56;
 deny 194.26.192.77;
 deny 194.26.196.116;
 deny 194.26.196.71;
+deny 194.62.248.21;
 deny 195.160.220.104;
 deny 195.176.3.19;
 deny 195.176.3.20;
@@ -895,7 +898,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.26.133.152;
@@ -922,7 +924,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1379,11 +1380,10 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0e:97c0:3e3:519::1;
+deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
@@ -1432,9 +1432,7 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 34.229.30.216;
 deny 35.0.127.52;
-deny 37.114.37.81;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.120.239.59;
@@ -1542,8 +1540,8 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
+deny 52.203.102.112;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
@@ -1650,7 +1648,6 @@ deny 84.54.51.69;
 deny 85.17.9.83;
 deny 85.209.133.112;
 deny 85.215.76.62;
-deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.104.194.13;
 deny 87.118.110.27;
